Update CodeContext for the mapping of groups of values.